# pgv_faiss

./: .gitignore  CMakeLists.txt  README.md  TODO.md  manual.md
examples/: CMakeLists.txt
examples/advanced/: advanced_usage.cpp  gpu_example.cpp
examples/basic/: basic_usage.cpp  basic_usage.cpp.backup
examples/benchmarks/: benchmark.cpp
examples/tools/: README.md  db_cleanup.cpp
pkg-config/: pgv-faiss.pc.in
scripts/: README.md  build.sh  clean_build.sh  cleanup_db.sh  install_dependencies.sh
src/include/: pgv_faiss.h
src/lib/: CMakeLists.txt
src/lib/faiss/: faiss_gpu_wrapper.cu  faiss_stub.cpp  faiss_wrapper.cpp  faiss_wrapper.h
src/lib/pgvector/: pgv_connection.cpp  pgv_connection.h  pgv_operations.cpp
tests/: CMakeLists.txt  README.md
tests/unit/: database_test.cpp  simple_test.cpp
